[tool.poetry]
name = "analysis-of-r-eldenring"
version = "0.1.0"
description = ""
authors = ["Jersey <jerseyliu228@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
bs4 = "^0.0.1"
psaw = "^0.1.0"
nltk = "^3.7"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
