[tool.poetry]
name = "analysis-of-r-eldenring"
version = "0.1.0"
description = ""
authors = ["Jersey <jerseyliu228@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
bs4 = "^0.0.1"
psaw = "^0.1.0"
nltk = "^3.7"
spacy = "^3.2.4"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0-py3-none-any.whl"}
wordcloud = "^1.8.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
